Added Asp.net website to host demo page. Added Image column

--- a/VirtualCollection/VirtualCollection.csproj
+++ b/VirtualCollection/VirtualCollection.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Demo\NetflixTitleSource.cs" />
     <Compile Include="Demo\MainViewModel.cs" />
     <Compile Include="Demo\Schedulers.cs" />
+    <Compile Include="Demo\StringToImageConverter.cs" />
     <Compile Include="Framework\Behaviors\NotifyViewModelOfLifeCycleEvents.cs" />
     <Compile Include="Framework\Extensions\SymbolExtensions.cs" />
     <Compile Include="Framework\MVVM\ActionCommand.cs" />
