--- a/VirtualCollection/packages.config
+++ b/VirtualCollection/packages.config
@@ -1,5 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Rx-Main" version="1.0.11226" targetFramework="sl50" />
-  <package id="Rx-Silverlight" version="1.0.11226" targetFramework="sl50" />
+  <package id="Blend.Interactivity.Silverlight" version="2.0.20520.0" targetFramework="sl50" />
+  <package id="Microsoft.Data.Edm" version="5.3.0" targetFramework="sl50" />
+  <package id="Microsoft.Data.OData" version="5.3.0" targetFramework="sl50" />
+  <package id="Microsoft.Data.Services.Client" version="5.3.0" targetFramework="sl50" />
+  <package id="Rx-Core" version="2.1.30214.0" targetFramework="sl50" />
+  <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="sl50" />
+  <package id="Rx-Linq" version="2.1.30214.0" targetFramework="sl50" />
+  <package id="Rx-Main" version="2.1.30214.0" targetFramework="sl50" />
+  <package id="Rx-PlatformServices" version="2.1.30214.0" targetFramework="sl50" />
+  <package id="Rx-Silverlight" version="2.1.30214.0" targetFramework="sl50" />
+  <package id="Rx-Xaml" version="2.1.30214.0" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Core" version="4.2010.4" targetFramework="sl50" />
+  <package id="System.Spatial" version="5.3.0" targetFramework="sl50" />
 </packages>
