--- a/VirtualCollection/packages.config
+++ b/VirtualCollection/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Blend.Interactivity.Silverlight" version="2.0.20520.0" targetFramework="sl50" />
+  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="sl50" />
+  <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="sl50" />
+  <package id="Microsoft.Bcl.Build" version="1.0.4" targetFramework="sl50" />
   <package id="Microsoft.Data.Edm" version="5.3.0" targetFramework="sl50" />
   <package id="Microsoft.Data.OData" version="5.3.0" targetFramework="sl50" />
   <package id="Microsoft.Data.Services.Client" version="5.3.0" targetFramework="sl50" />
